# mpardalos.com

./: ${path}  .gitignore  .gitlab-ci.yml  .gitmodules  .pages.yml  Makefile  Pipfile  README.md  config.toml  mpardalosxyz.cabal  netlify.toml  package-lock.json  package.json  pelicanconf.py  publishconf.py  site.hs  stack.yaml
_site/: about.html  atom.xml  index.html  style.css
_site/posts/: customizable_datatypes.html  pelican_blog.html  starting_a_blog.html
assets/: custom-style.scss
content/: about.md  current.md  current.org  now.md  pelican_blog.md  starting_a_blog.md  using.md
content/blog/: customizable_datatypes.org  measuring_ghc_objects.md
content/bookmarks/: 1663371079809.md  1663371805526.md  1663403483433.md  1663438085650.md  1663455220465.md  1663632256362.md  1679489639099.md  1680988096410.md  1681419491190.md  1704724997952.md  1704828942445.md  1705092332595.md  1705358002008-folk-interfaces.md  1705362397521.md  1705362639961.md  1705366994462.md  1705394068229.md  1705395428667.md  1705441336482.md  1705441555380.md  1705448911578.md  1705448928591.md  1705449191350.md  1705482703649.md  1706292164474.md  1706546777931.md  1707437391790.md  1709234381755.md  1709566383220.md  1709854250356.md  1710033247776.md  1710069471506.md  1710072848099.md  1710072973756.md  1710606269983.md  (+13 more)
css/: default.css  sourcecode.css  style.scss
layouts/: index.html
pages/: about.md
posts/: customizable_datatypes.org  pelican_blog.md  starting_a_blog.md
static/: brain-graph.json  graph.js  style.css
templates/: default.html  post.html
(+206 files in other folders)
