name:                mpardalosxyz
version:             0.1.0.0
homepage:            https://mpardalos.xyz
license:             BSD3
license-file:        LICENSE
author:              Michail Pardalos
maintainer:          mpardalos@gmail.com
copyright:           2019 Michail Pardalos
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -O0
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       hakyll-sass,
                       hsass
